src/scss/app.scss
/* ... */
body {
  margin: 0;
  margin-top: 19%;
  height: 100%;
  font-family: Oswald, sans-serif;
  color: #555;
  background-color: #fff;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.site-wrap {
  margin: 4%;
}

//Main headings (Bills, Feed, Petitions, Compare)//
h1 {
  font-weight: 800;
  font-size: 1.4em;
  text-align: center;
  color: black;
  text-transform: uppercase;
  margin: 0px;
}

//Second level headings//
h2 {
  font-weight: 200;
  font-size: 1.3em;
  text-align: left;
  margin-top: 4%;
  text-transform: uppercase;
  color: black;
}

//Descriptions under the headings for each page//
h3 {
  font-family: Arimo, sans-serif;
  font-size: 80%;
  text-align: center;
}

//list titles//
h4 {
  font-family: Oswald, sans-serif;
  font-weight: 200;
  font-size: 0.8em;
  text-transform: uppercase;
}

//list descriptions, blue///
h5 {
  font-family: Arimo, sans-serif;
  font-weight: 400;
  font-size: 0.9em;
  color: #2D81CF;
}

p {
  font-family: Arimo, sans-serif;
  font-size: 0.9em;
}


li {
  text-decoration: none;
}

ul {
  text-decoration: none;
}

a {
  text-decoration: none;
  color: black;
}

img {
  max-width: 100%;
}


////NAVBAR////

header {
  position: fixed;
  top: 0;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: flex-start;
  width: 100%;
  background-color: white;
}

.navbutton {
    width: 100%;
    font-weight: 200;
    font-family: Oswald, sans-serif;
    text-transform: uppercase;
    padding: 0.8em 0.4em 0.8em 0.4em;
    text-align: center;
    color: white;
    font-size: smaller;
}

a.navbutton.active {
    font-weight: 600;
}

.rep {
background-color: #778899;
}

      .compare {
      background-color: #2D81CF;
      }
    
      .petitions {
      background-color: #44A487;
      }
    
      .bills {
      background-color: #B095C4;
      }
    
      .feed {
      background-color: #8675B3;
      }

.dot {
    font-size: 2em;
    color: #778899;
}
/*
nav {
  border-top: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
  background-color: #f5f5f5;
  width: 100%;
  
  ul {
    font-family: Oswald, sans-serif;
    font-weight: 400;
    text-transform: uppercase;
    list-style: none;
    margin: 0 auto;
    position: relative;
  }
  
  a {
    display: block;
    padding: 10px;
    font-size: 13px;
    font-weight: 400;
    text-align: right;
    color: #aaa;
    cursor: pointer;
    text-decoration: none;
  }
  
  a:hover, a:focus {
  }
  
  li {
    float: left;
    border-right: 1px solid #ddd;
  }
  
  li:last-child {
    border-right: none;
  }
  
}*/


input {
  display: inline-block;
  outline: none;
  margin: 0;
  border: 1px solid white;
  background-color: rgba(0,0,0,0.1);
  text-align: center;
  width: 100%;
  height: 100%;
  padding: 0;
  box-shadow: none;
  font-family: Arimo;
  font-size: 0.8em;
  padding-left: 15px;
  padding-right: 15px;
}


////HAMBURGER MENU////

  .hamburger {
    display: block;
    flex-direction: row;
  }

*, *:before, *:after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.clearfix:after {
  content: "";
  display: table;
  clear: both;
}


@media only screen and (max-width: 767px) {
  
  .hamburger {
    display: block;
  }
  
  nav {
    border-top: none;
    border-bottom: none;
    width: 100%;
    background-color: white;
    
      a {
    display: block;
    padding: 10px;
    font-size: 13px;
    font-weight: 200;
    text-align: right;
    color: #aaa;
    cursor: pointer;
    text-decoration: none;
  }
  
  a:hover, a:focus {
  }
  
  li {
    float: left;
    border-right: 1px solid #ddd;
  }
  
  li:last-child {
    border-right: none;
  }
  
    .active {
      font-weight: 600;
    }
    
    ul {
      border-left: none;
      border-right: none;
      font-family: Oswald, sans-serif;
      font-weight: 400;
      text-transform: uppercase;
      list-style: none;
      margin: 0 auto;
      position: relative;
    }
    
    li {
      width: 100%;
      border-right: none;
    }
  }
  
  
  .menu {
    height: 0;
    overflow: hidden;
    transition: height 0.3s linear;
    background-color: white;
  }
  
  .slide-down {
    height: 93%;
  }
  
  .slide-up {
    height: 0%;
  }
}


//////HOME////

.main {
  height: 100%;
  margin-top: -15%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.intro {
  flex: 1 1 0;
  max-width: 90%;
  text-align: center;
  
  h1 {
    margin-top: 5%;
    margin-bottom: 5%;
  }
}

.square {
    position: fixed;
    top: 0;
    right: 0;
    width: 100%;
    height: 8%;
    background: white;
}

.canadamap {
  max-width: 80%;
  height: auto;
  margin-top: 1em;
}

.citizenlogo {
  position: relative;
  max-width: 20%;
  height: auto;
  margin-bottom: 1em;
  margin-top: 1em;
  
  -moz-animation-name: dropHeader;
  -moz-animation-iteration-count: 1;
  -moz-animation-timing-function: ease-out;
  -moz-animation-duration: 0.7s;
  
  -webkit-animation-name: dropHeader;
  -webkit-animation-iteration-count: 1;
  -webkit-animation-timing-function: ease-out;
  -webkit-animation-duration: 0.7s;
  
  animation-name: dropHeader;
  animation-iteration-count: 1;
  animation-timing-function: ease-out;
  animation-duration: 0.7s;
}
@-moz-keyframes dropHeader {
  0% {
    -moz-transform: scale(0.5);
  }
  100% {
    -moz-transform: scale(1.0);
  }
}
@-webkit-keyframes dropHeader {
  0% {
    -webkit-transform: scale(0.5);
  }
  100% {
    -webkit-transform: scale(1.0);
  }
}
@keyframes dropHeader {
  0% {
    transform: scale(0.5);
  }
  100% {
    transform: scale(1.0);
  }
}

.postcodeinputandentry {
  display: flex;
  height: 2.5em;
}

.postcodebutton {
  background-color: #778899;
  color: white;
  font-family: Oswald, sans-serif;
  width: 100%;
  height: 100%;
  font-size: 0.8em;
  padding: 3px;
  border: none;
  margin: 0;
}


////REP////

.repPage {
  h1 {
    margin-bottom: 4%;
  }
}
/* ... */

